force-app/main/default/objects/copado__User_Story__c/fields/copado__Triggers_Without_Coverage__c.field-meta.xml
<CustomField>
    <fullName>copado__Triggers_Without_Coverage__c</fullName>
    <description>Number of triggers without the minimum required coverage.</description>
    <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
    <label>Triggers Without Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>