force-app/main/default/objects/copado__User_Story__c/fields/New_Text_field__c.field-meta.xml
<CustomField>
    <fullName>New_Text_field__c</fullName>
    <label>New Text field Data</label>
    <length>40</length>
    <type>Text</type>
</CustomField>